--- a/docker-compose.app1.yml
+++ b/docker-compose.app1.yml
@@ -1,11 +1,22 @@
 version: '3'
 
 services:
-  whoami:
+  whoami1:
     image: emilevauge/whoami # A container that exposes an API to show its IP address
     networks:
       - traefik-test_traefik
     labels:
+      - "traefik.domain=whoami.test"
+      - "traefik.backend=whoami"
+      - "traefik.frontend.entryPoints=http"
+      - "traefik.frontend.rule=PathPrefix:/findme"
+
+  whoami2:
+    image: emilevauge/whoami # A container that exposes an API to show its IP address
+    networks:
+      - traefik-test_traefik
+    labels:
+      - "traefik.domain=whoami.test"
       - "traefik.backend=whoami"
       - "traefik.frontend.entryPoints=http"
       - "traefik.frontend.rule=PathPrefix:/findme"
