--- a/docker-compose.app2.yml
+++ b/docker-compose.app2.yml
@@ -8,7 +8,7 @@ services:
       - traefik-test_traefik
     labels:
       - "traefik.backend=echo"
-      - "traefik.frontend.entryPoints=http"
+      - "traefik.frontend.entryPoints=https"
       - "traefik.frontend.rule=Host:echo.testing.com"
 
 networks:
