--- a/traefik/traefik.toml
+++ b/traefik/traefik.toml
@@ -1,3 +1,6 @@
+logLevel = "DEBUG"
+defaultEntryPoints = ["http", "https"]
+
 [api]
     debug = true
 
@@ -10,6 +13,13 @@
 
     [entryPoints.http]
     address = ":80"
+
+    [entryPoints.https]
+    address = ":443"
+        [entryPoints.https.tls]
+            [[entryPoints.https.tls.certificates]]
+            certFile = "/certs/cert.crt"
+            keyFile = "/certs/cert.key"
 
 [docker]
 endpoint = "unix:///var/run/docker.sock"
