--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -6,7 +6,8 @@ services:
     command: --api
     ports:
       - "80:80"     # The HTTP port
-      - "443:443"
+      - "443:443"   # HTTPS
+      - "4443:4443" # mTLS
       - "8080:8080" # The Web UI (enabled by --api)
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events
